# embedding_inspector

./: LICENSE  README.md  pyproject.toml
embedding_inspector/: __init__.py  application.py
examples/dinov2_dog_cat/: Pipfile  run.py
examples/dinov2_dog_cat/data/: readme.txt
